@@ -1,3 +1,7 @@
+2002-08-28  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Temp.pm: Synch with perl 5.8.0 v0.13 MacOS fixes
+
 2001-02-22  Tim Jenness  <timj@jach.hawaii.edu>
 
 	--- RELEASE V0.12 ---
